# brylie.music.cli

./: .pre-commit-config.yaml  AGENTS.md  README.md  mise.toml  pyproject.toml
data/: tasks.json
src/: github.py  main.py  models.py  tasks.py
tests/: test_main.py
