[project]
name = "brylie-music-cli"
version = "0.1.0"
description = "CLI for managing Brylie's music projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "click-prompt>=0.7.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = "src"
